Log all profile results and open repl at end